Use Turfgame API v5 and make turfgame-monthly independent of Lundkvist data.